# cyberpunkred

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  STATUS.md  rust-toolchain.toml
.github/workflows/: ci.yml
content/catalogs/: armor.ron  black_ice.ron  cover.ron  demons.ron  drugs.ron  night_market.ron  programs.ron  roles.ron  skills.ron  vehicles.ron  weapons.ron
content/catalogs/cyberware/: borgware.ron  cyberaudio.ron  cyberlimb.ron  cyberoptics.ron  external_body.ron  fashionware.ron  internal_body.ron  neuralware.ron
content/gigs/: sample_gig.ron
content/tables/: critical_injuries_body.ron  critical_injuries_head.ron
content/tables/lifepath/: affectations.ron  clothing.ron  cultural_origin.ron  enemies.ron  exec.ron  family_background.ron  family_crisis.ron  fixer.ron  friends.ron  hairstyle.ron  lawman.ron  life_goals.ron  media.ron  medtech.ron  motivations.ron  netrunner.ron  nomad.ron  personality.ron  rockerboy.ron  solo.ron  tech.ron  tragic_loves.ron
crates/gm/: Cargo.toml
crates/gm/src/: error.rs  ids.rs  lib.rs
crates/gm/src/beats/: loader.rs  mod.rs  schema.rs  state.rs
crates/gm/src/encounter/: loader.rs  mod.rs
crates/gm/src/faction/: mod.rs
crates/gm/src/hooks/: mod.rs
crates/gm/src/ip/: llm_bonus.rs  mod.rs
crates/gm/src/log/: digest.rs  mod.rs  types.rs
crates/gm/src/npc/: entity.rs  hiring.rs  instantiate.rs  mod.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/rules/: Cargo.toml
crates/rules/src/: dice.rs  error.rs  lib.rs  movement.rs  resolution.rs  rng.rs  types.rs  world.rs
crates/rules/src/catalog/: armor.rs  black_ice.rs  cover.rs  critical_injuries.rs  cyberware.rs  demons.rs  drugs.rs  lifepath.rs  mod.rs  night_market.rs  programs.rs  roles.rs  skills.rs  vehicles.rs  weapons.rs
crates/rules/src/character/: cyberpsychosis.rs  cyberware.rs  data.rs  derive.rs  hp.rs  lifepath.rs  luck.rs  mod.rs  therapy.rs  wounds.rs
crates/rules/src/character/creation/: complete.rs  edgerunner.rs  mod.rs  streetrat.rs
crates/rules/src/character/progression/: earn.rs  mod.rs  spend.rs
crates/rules/src/checks/: complementary.rs  mod.rs  skill_check.rs
crates/rules/src/combat/: autofire.rs  cover.rs  critical_injury.rs  damage.rs  dodge.rs  explosives.rs  grapple.rs  grid.rs  melee.rs  mod.rs  ranged_single.rs  shields.rs  suppressive.rs  turn_engine.rs
crates/rules/src/effects/: mod.rs  modifier.rs
crates/rules/src/netrunning/: actions.rs  architecture.rs  black_ice.rs  demon.rs  integration.rs  mod.rs  state.rs  virus.rs
crates/rules/src/netrunning/abilities/: backdoor.rs  cloak.rs  control.rs  eye_dee.rs  mod.rs  pathfinder.rs  scanner.rs  slide.rs  zap.rs
crates/rules/src/netrunning/programs/: active.rs  attackers.rs  mod.rs
crates/rules/src/roles/: backup.rs  charismatic_impact.rs  combat_sense.rs  credibility.rs  interface.rs  maker.rs  medicine.rs  mod.rs  moto.rs  operator.rs  resources.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
tools/content-validator/: Cargo.toml
tools/replay/: Cargo.toml
(+3 files in other folders)
