[package]
name = "cpr_rules"
description = "Cyberpunk RED rules engine: pure logic, dice, combat, netrunning."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# `cpr_rules` does not generate UUIDs — callers pass them in. No `v4` feature.
uuid = { version = "1", features = ["serde"] }
# `os_rng` (default) pulls in `getrandom`, which complicates wasm32 builds.
# Every roll site uses `Rng::seed_from_u64` — never OS entropy.
rand = { version = "0.9", default-features = false, features = ["std"] }
rand_chacha = { version = "0.9", default-features = false, features = ["std"] }
# RON loaders for the Phase 2 catalogs (WP-201 onward). Promoted from
# dev-dependencies because catalog loaders are part of the public API.
ron = "0.8"

[dev-dependencies]
