[package]
name = "cpr_web"
description = "Leptos frontend for the Cyberpunk RED CRPG. WASM only."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
